@@ -36,4 +36,11 @@ class Deployment < ActiveRecord::Base
   def manual_actions
     deployable.try(:other_actions)
   end
+
+  def deployed_to(ref)
+    commit = project.commit(ref)
+    return false unless commit
+
+    project.repository.merge_base(commit.id, sha) == commit.id
+  end
 end
